--- a/src/public/css/show.css
+++ b/src/public/css/show.css
@@ -6,14 +6,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .date-navigation a {
     text-decoration: none;
-    color: #333;
-    font-size: 24px;
+    color: #007bff;
+    font-size: 16px;
     margin: 0 20px;
+    padding: 1px 8px;
+    border: 1px solid #007bff;
+    background: white;
 }
 
 .date-navigation h2 {
@@ -24,44 +27,66 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    background-color: #ffffff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 th,
 td {
-    padding: 12px;
+    padding: 25px;
     text-align: left;
-    border-bottom: 1px solid #e0e0e0;
+    border-top: 2px solid #cabebe;
 }
 
 th {
-    background-color: #f8f8f8;
-    font-weight: bold;
+    font-size: 18px;
+    font-weight: 900;
+}
+
+.contact-table tbody tr:nth-child(even) {
+    background-color: #f8f9fa;
+}
+
+.contact-table tbody tr:hover {
+    background-color: #e9ecef;
+}
+
+.pagination-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 
 .pagination {
     display: flex;
-    justify-content: center;
     list-style-type: none;
     padding: 0;
-    margin-top: 20px;
 }
 
-.pagination li {
-    margin: 0 5px;
+
+.pagination li a,
+.pagination li span {
+    display: block;
+    padding: 5px 15px;
+    text-decoration: none;
+    border: 1px solid #ddd;
+    color: #007bff;
 }
 
 .pagination a {
-    text-decoration: none;
-    color: #333;
-    padding: 5px 10px;
-    border: 1px solid #ddd;
-    border-radius: 3px;
+    background: white;
 }
 
-.pagination .active a {
-    background-color: #3490dc;
-    color: #ffffff;
-    border-color: #3490dc;
+.pagination li.active span {
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
 }
+
+.pagination li a:hover {
+    background-color: #f8f9fa;
+}
+
+.disabled {
+    color: #ccc;
+    cursor: not-allowed;
+}
+
