--- a/src/public/css/show.css
+++ b/src/public/css/show.css
@@ -61,7 +61,6 @@ th {
     padding: 0;
 }
 
-
 .pagination li a,
 .pagination li span {
     display: block;
@@ -90,3 +89,125 @@ th {
     cursor: not-allowed;
 }
 
+.search-form {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.search-form input[type="text"],
+.search-form input[type="date"],
+.search-form select,
+.search-form button {
+    margin: 0 5px;
+    padding: 5px 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.search-form button {
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.search-form button:hover {
+    background-color: #0056b3;
+}
+
+.form-group {
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.btn {
+    padding: 5px 15px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #0056b3;
+}
+
+.default-btn {
+    text-decoration: none;
+    background-color: #79acf8;
+    color: white;
+    margin-left: 7px;
+    font-size: 12px;
+    padding: 7px 5px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.default-btn:hover {
+    background-color: #0056b3;
+}
+
+.mb-4 {
+    margin-bottom: 20px;
+}
+
+.date-range-form {
+    display: flex;
+    justify-content: left;
+    align-items: flex-end;
+    margin-bottom: 20px;
+}
+
+.date-range-form .form-group {
+    margin: 0 10px;
+}
+
+.date-range-form input[type="date"] {
+    padding: 6px;
+}
+
+.date-range-form .btn {
+    margin-left: 10px;
+    padding: 6px 12px;
+}
+
+.date-range-form select {
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    margin-right: 10px;
+}
+
+.work-time {
+    color:rgb(216, 29, 29);
+}
+
+.night-work-time {
+    color:#007bff;
+}
+
+@media (max-width: 768px) {
+    .date-range-form {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .date-range-form .form-group,
+    .date-range-form .btn {
+        margin: 5px 0;
+    }
+}
+
+.sortOrder {
+    text-decoration: none;
+}
+
+.user__alert--error {
+    color: tomato;
+}
